# ecsdb

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.zed/: settings.json  (+1 more)
ecsdb/: Cargo.toml
ecsdb/examples/: diary.rs  stress.rs
ecsdb/src/: component.rs  dyn_component.rs  entity.rs  extension.rs  lib.rs  resource.rs  schedule.rs  schema.sql  sqlite_ext.rs  system.rs  tuple_macros.rs
ecsdb/src/migrations/: 03_resources_to_components.sql
ecsdb/src/query/: ir.rs  mod.rs
ecsdb/src/query/snapshots/: ecsdb__query__ir__test__filter_expression_sql_query@And([EntityId(42), WithComponent("ecsdb::Test"), EntityId(42)]).sql_query().snap  ecsdb__query__ir__test__filter_expression_sql_query@And([WithComponent("ecsdb::Foo"), WithoutComponent("ecsdb::Bar")]).simplify().sql_query().snap  ecsdb__query__ir__test__filter_expression_sql_query@And([WithComponent("ecsdb::Foo"), WithoutComponent("ecsdb::Bar")]).sql_query().snap  ecsdb__query__ir__test__filter_expression_sql_query@And([WithComponent("ecsdb::Test"), EntityId(42), WithComponent("ecsdb::Test"), EntityId(42)]).simplify().sql_query().snap  ecsdb__query__ir__test__filter_expression_sql_query@And([WithComponent("ecsdb::Test"), EntityId(42), WithComponent("ecsdb::Test"), EntityId(42)]).sql_query().snap  ecsdb__query__ir__test__filter_expression_sql_query@And([WithComponent("ecsdb::Test"), EntityId(42)]).simplify().sql_query().snap  ecsdb__query__ir__test__filter_expression_sql_query@And([WithComponent("ecsdb::Test"), EntityId(42)]).sql_query().snap  ecsdb__query__ir__test__filter_expression_sql_query@EntityId(42).simplify().sql_query().snap  ecsdb__query__ir__test__filter_expression_sql_query@EntityId(42).sql_query().snap  ecsdb__query__ir__test__filter_expression_sql_query@None.simplify().sql_query().snap  ecsdb__query__ir__test__filter_expression_sql_query@None.sql_query().snap  ecsdb__query__ir__test__filter_expression_sql_query@Or([WithComponent("ecsdb::Foo"), WithoutComponent("ecsdb::Bar")]).simplify().sql_query().snap  ecsdb__query__ir__test__filter_expression_sql_query@Or([WithComponent("ecsdb::Foo"), WithoutComponent("ecsdb::Bar")]).sql_query().snap  ecsdb__query__ir__test__filter_expression_sql_query@Or([WithComponent("ecsdb::Test"), EntityId(42), WithComponent("ecsdb::Test"), EntityId(42)]).simplify().sql_query().snap  ecsdb__query__ir__test__filter_expression_sql_query@Or([WithComponent("ecsdb::Test"), EntityId(42), WithComponent("ecsdb::Test"), EntityId(42)]).sql_query().snap  ecsdb__query__ir__test__filter_expression_sql_query@Or([WithComponent("ecsdb::Test"), EntityId(42)]).simplify().sql_query().snap  ecsdb__query__ir__test__filter_expression_sql_query@Or([WithComponent("ecsdb::Test"), EntityId(42)]).sql_query().snap  ecsdb__query__ir__test__filter_expression_sql_query@WithComponent("ecsdb::Test").simplify().sql_query().snap  ecsdb__query__ir__test__filter_expression_sql_query@WithComponent("ecsdb::Test").sql_query().snap  ecsdb__query__ir__test__filter_expression_sql_query@WithoutComponent("ecsdb::Test").simplify().sql_query().snap  (+23 more)
ecsdb_cli/: Cargo.toml
ecsdb_cli/src/: commands.rs  lib.rs  pipeline.rs
ecsdb_cli/src/snapshots/: ecsdb_cli__pipeline__test__query_filters@all | filter(entity == 42) | filter(entity == 23).snap  ecsdb_cli__pipeline__test__query_filters@all | skip(1) | sortBy(last_modified).snap  ecsdb_cli__pipeline__test__query_filters@all | skip(1).snap  ecsdb_cli__pipeline__test__query_filters@all | take(23).snap  ecsdb_cli__pipeline__test__query_filters@all.snap  ecsdb_cli__pipeline__test__query_filters@all|filter(data == "hello__nworld").snap  ecsdb_cli__pipeline__test__query_filters@all|filter(data == 1.5).snap  ecsdb_cli__pipeline__test__query_filters@all|filter(data == 1.5e2).snap  ecsdb_cli__pipeline__test__query_filters@all|filter(data == [1,2,3]).snap  ecsdb_cli__pipeline__test__query_filters@all|filter(data == []).snap  ecsdb_cli__pipeline__test__query_filters@all|filter(data == [{"a":1},{"a":2}]).snap  ecsdb_cli__pipeline__test__query_filters@all|filter(data == null).snap  ecsdb_cli__pipeline__test__query_filters@all|filter(data == {"key":"value"}).snap  ecsdb_cli__pipeline__test__query_filters@all|filter(data == {}).snap  ecsdb_cli__pipeline__test__query_filters@all|filter(data.a.b.c == null).snap  ecsdb_cli__pipeline__test__query_filters@all|filter(data.array[3] == 42).snap  ecsdb_cli__pipeline__test__query_filters@all|filter(data.items[0].id == "x").snap  ecsdb_cli__pipeline__test__query_filters@all|filter(data.last_updated == "foo").snap  ecsdb_cli__pipeline__test__query_filters@all|filter(data[0] == 1).snap  ecsdb_cli__pipeline__test__query_filters@all|filter(entity != 42).snap  ecsdb_cli__pipeline__test__query_filters@all|filter(entity = 42).snap  ecsdb_cli__pipeline__test__query_filters@all|filter(entity == -1).snap  ecsdb_cli__pipeline__test__query_filters@all|filter(entity == 42).snap  ecsdb_cli__pipeline__test__query_filters@all|sortBy(data.priority).snap  ecsdb_cli__pipeline__test__query_filters@all|sortBy(data.score desc).snap
ecsdb_web/: Cargo.toml
ecsdb_web/examples/: axum.rs  hyper.rs
ecsdb_web/src/: ecs_service.rs  htmx.rs  lib.rs  list.rs
(+58 files in other folders)
