[package]
name = "ecsdb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
anymap = "0.12.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive"] }
ecsdb_derive = { path = "ecsdb_derive" }
eloquent = "2.0.3"
hex = "0.4.3"
lazy_static = "1.5.0"
regex = "1.11.1"
rusqlite = { version = "0.32.1", features = ["modern_sqlite", "functions"] }
rustyline = "17.0.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
insta = "1.42.2"
