[package]
name = "ecsdb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
anymap = "0.12.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
ecsdb_derive = { path = "./ecsdb_derive" }
eloquent = "2.0.4"
hex = "0.4.3"
lazy_static = "1.5.0"
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["modern_sqlite", "functions"] }
rustyline = "17.0.2"
self_cell = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
insta = "1.43.2"

[lints.clippy]
needless_lifetimes = "allow"
