[package]
name = "ecsdb_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
dirs = "6.0.0"
ecsdb = { path = "../ecsdb" }
nom = "8.0.0"
rustyline = { version = "17.0.2", features = ["rusqlite", "with-sqlite-history"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
insta = "1.46.3"
