[package]
name = "ecsdb_web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bytes = "1.11.0"
ecsdb = { path = "../ecsdb" }
futures-util = "0.3.31"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = { version = "0.1.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["full"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = "0.1.41"
