[package]
name = "ecsdb_web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bytes = "1.11.0"
chrono = "0.4.42"
ecsdb = { path = "../ecsdb" }
futures-util = "0.3.31"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = { version = "0.1.3", features = ["full"] }
iref = { version = "3.2.2", features = ["serde", "macros"] }
maud = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
serde_urlencoded = "0.7.1"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["futures-io", "io", "io-util"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.8", features = ["full"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = "0.1.41"
url = "2.5.8"

[dev-dependencies]
axum = "0.8.8"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
tracing-subscriber = "0.3.22"
